# dicom2mongodb

./: pyproject.toml
src/dicom2mongo/: __main__.py  database.py  dicom_extractor.py  dicom_receptor.py
