[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dicom2mongo"
version = "0.0.1"
authors = [
  { name="joamonse" },
]
description = "A small program to extract and upload dicom tags to a mongodb database"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"